align fix

--- a/src/Form.css
+++ b/src/Form.css
@@ -1,5 +1,5 @@
 body {font-family: Arial, Helvetica, sans-serif;
-    background: url("./Infographic1.PNG");
+    background: url("./Capture123.PNG");
     background-size: 100vw 100vh;
 }
 * {box-sizing: border-box;}
